--- a/public/css/main.css
+++ b/public/css/main.css
@@ -680,22 +680,22 @@ ul {
   width: 40%;
   padding: 3em; }
   .login-wrapper h3 {
-    margin-bottom: 2em; }
+    margin-bottom: 1em; }
   .login-wrapper .form-group {
     display: flex;
     flex-direction: column; }
     .login-wrapper .form-group label {
       visibility: hidden; }
-    .login-wrapper .form-group input[type='email'], .login-wrapper .form-group input[type='password'] {
-      height: 60px;
+    .login-wrapper .form-group input {
+      height: 3em;
       width: 100%;
       border: none;
       font-size: 15pt;
       background-color: #FF6E31;
       color: #fff;
-      margin-bottom: 2em;
+      margin-bottom: 1em;
       padding-left: 0.5em; }
-    .login-wrapper .form-group input[type='submit'] {
+    .login-wrapper .form-group .button-login {
       background-color: #F05014;
       color: #fff;
       border-bottom: 0;
@@ -705,7 +705,10 @@ ul {
       height: 40px;
       font-size: 13pt;
       border-radius: 10px;
-      align-self: center; }
+      align-self: center;
+      margin-top: 1em; }
+      .login-wrapper .form-group .button-login:hover {
+        background-color: #FF6E31; }
 
 .footer-navigation {
   min-width: 355px; }
