--- a/public/css/main.css
+++ b/public/css/main.css
@@ -962,6 +962,8 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column; }
+  .backend-wrapper h3 {
+    margin-bottom: 2em; }
 
 .backend_menu {
   margin-top: 80px;
@@ -997,16 +999,27 @@ footer {
     border-bottom: 1px solid #89145C; }
 
 #form-edit .edit {
-  border: 1px solid red;
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  justify-content: center; }
   #form-edit .edit .form-group {
-    border: 1px solid green;
     display: flex;
-    flex-direction: column; }
-    #form-edit .edit .form-group input {
-      height: 2em;
-      width: 20em; }
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    width: 80vw; }
+  #form-edit .edit input, #form-edit .edit textarea {
+    text-align: center;
+    margin: 10px;
+    width: 40%;
+    height: 2em;
+    font-size: 13pt; }
+  #form-edit .edit textarea {
+    padding: 1em;
+    height: 10em; }
 
 ::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
