--- a/public/scss/objects.scss
+++ b/public/scss/objects.scss
@@ -1376,6 +1376,10 @@ transition: transform 0.4s ease;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+  h3 {
+    margin-bottom: 2em;
+  }
 }
 
 .backend_menu{
@@ -1433,26 +1437,39 @@ transition: transform 0.4s ease;
 
 #form-edit{
   .edit{
-    border: 1px solid red;
+
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+
 
     .form-group{
-      border: 1px solid green;
       display: flex;
       flex-direction: column;
-
-      input{
-        height: 2em;
-        width: 20em;
-      }
-
-      textarea{
-
-      }
+      flex-wrap:wrap;
+      align-items: center;
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+       width: 80vw;
+    }
+    label{
 
     }
-  }
+      input, textarea{
+        text-align: center;
+        margin: 10px;
+        width: 40%;
+        height: 2em;
+
+        font-size: 13pt;
+
+      }
+      textarea{
+        padding: 1em;
+        height: 10em;
+      }
+    }
 }
 
 
