--- a/public/scss/objects.scss
+++ b/public/scss/objects.scss
@@ -1218,11 +1218,11 @@ transition: transform 0.4s ease;
   justify-content: space-around;
 }
 
-.button-next__dissabeld{
-  pointer-events: none;
-  cursor: default;
-  background-color: grey;
-}
+// .button-next__dissabeld{
+//   pointer-events: none;
+//   cursor: default;
+//   background-color: grey;
+// }
 
 
 //Princess Mistress Queen
@@ -1368,7 +1368,7 @@ transition: transform 0.4s ease;
 }
 
 
-//Backend
+//BACKEND
 
 .backend-wrapper{
   margin: 70px 100px;
