--- a/public/css/main.css
+++ b/public/css/main.css
@@ -957,6 +957,12 @@ footer {
   font-family: 'Kingthings';
   font-size: 30pt; }
 
+.success_message {
+  padding: 1em;
+  background-color: green;
+  color: #fff;
+  font-size: 13pt; }
+
 .backend-wrapper {
   margin: 70px 100px;
   display: flex;
