--- a/public/scss/objects.scss
+++ b/public/scss/objects.scss
@@ -1029,6 +1029,14 @@ box-shadow: $shadow;
     }
 }
 
+.form-error{
+  color: red;
+}
+
+.form-success{
+  color: green;
+}
+
 
 .footer-contact form {
     display: flex;
