--- a/public/css/main.css
+++ b/public/css/main.css
@@ -975,6 +975,8 @@ footer {
   justify-content: center;
   align-items: center;
   flex-direction: column; }
+  .backend-wrapper input, .backend-wrapper textarea {
+    border: 1px solid grey; }
   .backend-wrapper h3 {
     margin-bottom: 2em; }
 
@@ -1012,6 +1014,9 @@ footer {
   .backend_table tr {
     min-height: 4em;
     border-bottom: 1px solid #89145C; }
+
+.infotext {
+  color: #F05014; }
 
 .backend-form {
   display: flex;
@@ -1052,11 +1057,25 @@ footer {
       padding: 0.5em; }
     .backend-form .form-group input {
       height: 2.5em; }
-    .backend-form .form-group .infotext {
-      color: #F05014; }
     .backend-form .form-group p {
       font-size: 12pt;
       margin-bottom: 0.3em; }
+
+.contact {
+  width: 50vw;
+  margin-bottom: 3em; }
+  .contact p {
+    border-bottom: 1px solid grey;
+    padding: 0.5em; }
+  .contact .contact-message-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; }
+  .contact .contac-message {
+    padding: 1em 1em 1em 0; }
+  .contact .infotext {
+    font-size: 13pt;
+    margin-right: 1em; }
 
 ::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
