--- a/public/scss/objects.scss
+++ b/public/scss/objects.scss
@@ -690,6 +690,11 @@ padding: 50px 100px;
     border: 1px solid map-get($colors, lightPurple);
   }
 
+  a{
+    cursor:pointer;
+    color: #fff;
+  }
+
   .abo_progress--complete{
     background-color: map-get($colors, orange);
     background-image: url('../img/check.png');
