--- a/public/css/main.css
+++ b/public/css/main.css
@@ -205,13 +205,15 @@ ul {
 
 .about {
   margin-top: 50px;
-  margin-bottom: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   width: 70%;
   line-height: 30px; }
+  .about .about-text {
+    margin: 2em;
+    line-height: 2em; }
 
 .abos {
   display: flex;
