--- a/public/scss/objects.scss
+++ b/public/scss/objects.scss
@@ -388,7 +388,8 @@ h2{
 
 .featrued_products-crowns img{
   box-sizing: border-box;
-  width: 15em;
+  width: auto;
+  height: 2em;
   overflow: hidden;
 
 
@@ -748,6 +749,7 @@ padding: 50px 100px;
     width: 50px;
 
     &:hover{
+      cursor: pointer;
       background-image: url(../img/rating/crown_colored.png);
     }
   }
@@ -841,6 +843,11 @@ h2{
       font-size: 15pt;
     }
   }
+}
+
+.helptext{
+  font-size: 10pt;
+  font-family: map-get($fonts, text);
 }
 
 
@@ -1243,12 +1250,12 @@ box-shadow: $shadow;
     width: 57%;
     display: block;
     margin: 14% auto;
-
     background-color: rgba(25, 25, 25, 0.8);
     padding: 10%;
     color: #fff;
 
     h3{
+      margin-bottom: 1em;
       text-align: center;
     }
   }
