Font eingebunden + links ausgetauscht in home order

--- a/public/scss/settings.scss
+++ b/public/scss/settings.scss
@@ -26,6 +26,11 @@ headline: "Arima Madurai"
     src: url('../fonts/rothenbg.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'Raleway';
+    src: url('../fonts/Raleway-Regular.ttf') format('truetype');
+}
+
 
 
 //Shadow
