--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,10 @@
   font-family: 'Rothenburg';
   src: url("../fonts/rothenbg.ttf") format("truetype"); }
 
+@font-face {
+  font-family: 'Raleway';
+  src: url("../fonts/Raleway-Regular.ttf") format("truetype"); }
+
 * {
   padding: 0;
   margin: 0; }
