Mobile Menu fix?

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,34 +77,29 @@ ul {
 
 .mobile-menu {
   display: none;
-  position: absolute;
   background-color: rgba(25, 25, 25, 0.9);
   height: 100vh;
-  width: 100vh;
-  margin-top: 295px;
+  width: 100vw;
+  margin-top: -5em;
+  padding-top: 6em;
   z-index: 2;
-  align-items: center;
-  justify-content: center;
-  overflow-y: hidden;
-  position: fixed; }
+  overflow: hidden;
+  justify-content: center; }
   .mobile-menu ul li {
     margin: 30px; }
     .mobile-menu ul li a {
       margin: 20px;
       color: #fff; }
+      .mobile-menu ul li a:hover {
+        border-bottom: 1px solid #fff; }
 
 .menu-button {
-  border: 0;
-  background-color: #89145C;
-  padding: 15px;
-  border-radius: 50px;
-  margin: 10px;
-  margin-right: 45px;
-  width: 60px;
-  height: 60px;
+  height: 2em;
+  width: 2.3em;
   outline: none;
   cursor: pointer;
-  right: 0px;
+  top: 1.6em;
+  right: 2em;
   position: fixed; }
   .menu-button .menu-bar {
     width: 30px;
