--- a/public/scss/media.scss
+++ b/public/scss/media.scss
@@ -2,9 +2,9 @@
 
 @media screen and (max-width: 1133px){
   .product-detail_image{
-align-self: center;
+    align-self: center;
   margin: 0px;
-  margin-bottom: 50px;
+  margin-bottom: 2em;
 
   }
 
@@ -110,19 +110,6 @@ align-self: center;
   left: 0;
   }
 
-  .products-sorting{
-      justify-content: center;
-      align-items: center;
-    ul{
-        flex-wrap: wrap;
-        width: calc(100% - 20px);
-        margin: 20px;
-        li{
-          width: 26%;
-        }
-    }
-   }
-
    .answer-wrapper {
      margin: 41% 18% 32% 11%;
      height: 36%;
@@ -168,6 +155,7 @@ align-self: center;
 
   .menu-button{
     display: block;
+    right: 6em;
   }
 
   .header-subnav{
@@ -180,7 +168,7 @@ align-self: center;
   .mobile-logo{
     display: block;
     height: 60px;
-    margin: 15px auto 0px;
+    margin: 1em 17em 0 1em;
   }
 
   .header-navigation{
@@ -233,8 +221,70 @@ align-self: center;
     }
   }
 
+  .about{
+    margin-top: 2em;
+    width: 100%;
+    line-height: 1.3em;
+    .about-text{
+      margin: 2em;
+    }
+  }
 
+  .products-dropdown{
+    display: flex;
+    justify-content: center;
+  }
+}
 
+@media screen and (max-width: 450px){
+
+  .mobile-logo{
+    margin: 1em 12em 0 1em;
+  }
+
+  .menu-button{
+    right: 4em;
+  }
+
+  .product-detail_image{
+    box-shadow: 0px 0px 0px #fff;
+  }
+
+  .user-comment{
+    width: 67vw;
+
+  }
+
+  .product-detail_comments {
+    width: 100vw;
+  }
+}
+@media screen and (max-width: 330px){
+  .about-text{
+    text-align: center;
+  }
+
+  .mobile-logo{
+    margin: 1em 8em 0 1em;
+  }
+
+  .menu-button{
+    right: 3em;
+  }
+
+  .product-detail_comments {
+   background-color:0;
+   padding: 0;
+   margin: 0;
+
+    .comment{
+      border-radius: 0;
+    }
+  }
+  .user-comment {
+    background-color: map-get($colors, lightPurple);
+    border-radius: 0px;
+  }
 
 
 }
