--- a/public/scss/objects.scss
+++ b/public/scss/objects.scss
@@ -58,20 +58,14 @@ justify-content: center;
 
 ///TEST ENDE
 .menu-button {
-  // border: 0;
-  // background-color: map-get($colors, purple);
-  // padding: 15px;
-  // border-radius: 50px;
-  // margin: 10px;
-  // margin-right: 45px;
-  // width: 60px;
+
   height: 2em;
     width: 2.3em;
   outline: none;
   cursor: pointer;
   top: 1.6em;
   right: 2em;
-  position: fixed;
+  position: absolute;
 
 
   .menu-bar {
@@ -226,7 +220,6 @@ justify-content: center;
   justify-content: center;
   flex-direction: column;
   width: 70%;
-  line-height: 30px;
 
   .about-text{
     margin: 2em;
@@ -240,12 +233,12 @@ justify-content: center;
   display: flex;
   justify-content: center;
   align-items:center;
-  margin: 50px;
+  margin: 1em 0 2em 0;
   color: #fff;
 }
 
 .abos h4{
-  margin-bottom: 35px;
+  margin-bottom: 1.2em;
 }
 
 .abos-three_months{
@@ -273,12 +266,8 @@ justify-content: center;
   width: 30%;
   min-height: 29em;
 
-h2{
-    margin-bottom:40px;
-}
-  p{
-    margin: 10px;
-    box-sizing: border-box;
+  h2{
+      margin-bottom:1em;
   }
 }
 
@@ -287,14 +276,10 @@ h2{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin:2em ;
 
-  margin-top: 50px;
-  margin-left: 100px;
-  margin-right: 100px;
   p{
-    // height: 4em;
-  line-height: 40px;
-
+  line-height: 2em;
   }
 }
 
@@ -369,14 +354,16 @@ h2{
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 20em;
+   height: 20em;
+   width: 15em;
   overflow: hidden;
   margin-bottom: 30px;
 
 
   img{
+    max-width: 20em;
+    max-height: 15em;
 
-    width: 15em;
   }
   transition: transform 0.4s ease;
   &:hover{
@@ -403,26 +390,32 @@ h2{
   display: flex;
   // flex-direction: column;
   img{
-    height: 51px;
-    margin: 10px;
+    height: auto;
+    margin: 1em;
+    width: auto;
+    max-width: 18em;
+    max-height: 2em;
+    box-sizing: border-box;
   }
 }
 
 
 
 .products-sorting{
-margin-top: 50px;
+  margin-top: 2em;
+  display:flex;
 
-display:flex;
-flex-direction: column;
+  flex-direction: column;
   .product-categries{
     display: flex;
+      flex-wrap: wrap;
     .categorie{
       background-color: map-get($colors, lightPurple);
       border: 2px solid map-get($colors, purple);
       font-family: map-get($fonts, headline);
       font-size: 10pt;
-
+      box-sizing: border-box;
+      width: 50vw;
       padding: 8px 30px 8px 30px;
 
       &.sorting-selected{
@@ -441,23 +434,23 @@ flex-direction: column;
   margin-top: 15px;
 
 
+
   select{
-    background-image: url('../img/select-arrow.png');
+    background-image: url(../img/select-arrow.png);
     background-position: 118px 15px;
     background-repeat: no-repeat;
-    background-size: 26px;
-
-    background-color: map-get($colors, orange);
-    width: 154px;
-    height: 40px;
-    padding: 10px;
+    background-size: 2em;
+    background-color: #F05014;
+    width: 11em;
+    height: 3em;
+    padding-left: 1em;
     font-size: 0.9em;
     color: #fff;
-    line-height: 1;
+    line-height: 2em;
     border: 0;
     border-radius: 0;
-
     -webkit-appearance: none;
+
     &:hover{
         cursor: pointer;
     }
@@ -528,7 +521,9 @@ display: flex;
 align-items: flex-start;
 flex-wrap: wrap;
 justify-content: center;
-padding: 50px 100px;
+padding: 2em;
+box-sizing: border-box;
+    max-width: 100vw;
 }
 
 .product-detail_image{
@@ -540,7 +535,10 @@ padding: 50px 100px;
   justify-content: center;
   margin-right: 10em;
   img{
-    height: 25em;
+    box-sizing: border-box;
+    padding: 1em;
+    max-height: 25em;
+    max-width: 25em;
   }
 }
 
@@ -574,8 +572,8 @@ padding: 50px 100px;
 
 .product-detail_comments{
   background-color: map-get($colors, purple);
-  padding: 100px;
-  margin: 100px;
+  padding: 5em;
+    margin: 2em;
 
   img{
     width: 20%;
@@ -597,8 +595,8 @@ padding: 50px 100px;
     min-width: 40vw;
 
     background-color: #fff;
-    padding: 40px;
-    margin-bottom: 100px;
+    padding: 2em;
+        margin-bottom: 2em;
     box-shadow: $shadow;
     border-radius: 30px;
   }
@@ -609,7 +607,7 @@ padding: 50px 100px;
 }
 
 .crowns{
-
+  text-align: center;
   ul{
     display: flex;
     cursor: pointer;
@@ -632,7 +630,7 @@ padding: 50px 100px;
 
 .user-comment{
   background-color: #fff;
-  padding: 40px;
+  padding:3.2em;
   border-radius: 30px;
   min-height: 12em;
 
