--- a/public/scss/media.scss
+++ b/public/scss/media.scss
@@ -234,6 +234,9 @@
     display: flex;
     justify-content: center;
   }
+  .products-sorting .product-categries .categorie{
+    width: 50vw;
+  }
 }
 
 @media screen and (max-width: 450px){
