--- a/public/scss/objects.scss
+++ b/public/scss/objects.scss
@@ -408,14 +408,14 @@ justify-content: center;
   flex-direction: column;
   .product-categries{
     display: flex;
-      flex-wrap: wrap;
+    flex-wrap: wrap;
     .categorie{
       background-color: map-get($colors, lightPurple);
       border: 2px solid map-get($colors, purple);
       font-family: map-get($fonts, headline);
       font-size: 10pt;
       box-sizing: border-box;
-      width: 50vw;
+      width: 7em;
       padding: 8px 30px 8px 30px;
 
       &.sorting-selected{
@@ -463,6 +463,7 @@ justify-content: center;
   flex-wrap: wrap;
   justify-content: space-around;
   width: 80%;
+  box-sizing: border-box;
   margin-top: 50px;
   padding: 0px 50px;
 }
