--- a/public/scss/media.scss
+++ b/public/scss/media.scss
@@ -39,6 +39,8 @@
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.5);
 }
 
+
+
 }
 
 @media screen and (max-width: 910px){
@@ -260,6 +262,19 @@
 
   .product-detail_comments {
     width: 100vw;
+  }
+
+  .order-form{
+    box-shadow: 0px 0px 0px #fff;
+    padding: 1em;
+    max-width: 80%;
+
+  }
+  .register-wrapper{
+    box-shadow: 0px 0px 0px #fff;
+    input{
+          width: 63vw;
+    }
   }
 }
 @media screen and (max-width: 330px){
