--- a/public/css/main.css
+++ b/public/css/main.css
@@ -428,7 +428,7 @@ ul {
   height: 25em;
   display: flex;
   justify-content: center;
-  margin-right: 10em; }
+  margin-right: 2em; }
   .product-detail_image img {
     box-sizing: border-box;
     padding: 1em;
@@ -909,6 +909,11 @@ footer {
   transition: transform 0.4s ease; }
   .button:hover {
     transform: scale(1.2); }
+
+.button.disabled {
+  pointer-events: none;
+  cursor: default;
+  background-color: grey; }
 
 .button-wrapper {
   display: flex;
