--- a/public/scss/objects.scss
+++ b/public/scss/objects.scss
@@ -534,7 +534,7 @@ box-sizing: border-box;
   height: 25em;
   display: flex;
   justify-content: center;
-  margin-right: 10em;
+  margin-right: 2em;
   img{
     box-sizing: border-box;
     padding: 1em;
@@ -1289,10 +1289,15 @@ border-radius: 8pt;
 background-color: map-get($colors, purple);
 
 transition: transform 0.4s ease;
-&:hover{
-  transform: scale(1.2);
+  &:hover{
+    transform: scale(1.2);
 
+  }
 }
+.button.disabled {
+  pointer-events: none;
+  cursor: default;
+  background-color: grey;
 }
 
 .button-wrapper{
